BE V1.1.0 feat(abrechnung): Dokumentenverwaltung für Belege implementiert
- Upload von PDF- und Bilddateien
- Download von Belegdokumenten
- Löschen von Dokumenten
- Reihenfolge der Dokumente je Beleg
- Speicherung der Dokumente in PostgreSQL
- REST-Controller für Belegdokumente
- DTOs, Mapper und Repository ergänzt
- Service inkl. Validierung und Fehlerbehandlung
- Unit- und Integrationstests ergänzt